    configuration file'

 5. Import the XML file with 'Utilities', 'Import category/launcher XML configuration file'.
    This will create the 3D boxes default directory automatically.

 6. If you use custom paths for your assets and no the standard ones.
    Make sure each launcher has a <path_3dbox> tag. Then, reimport the XML configuration file.


[B]TODO before releasing 0.9.8-beta1[/B]


[B]Advanced Emulator Launcher | version 0.9.8-beta1 | XX September 2019[/B]

FEATURE  [SCRAPERS] Copy scraper stuff from master branch by Chrisism.

FEATURE  [SCRAPERS] Fix MobyGames scraper and use new MobyGames API.
         See http://www.mobygames.com/info/api

FEATURE  [SCRAPERS] Fix TheGamesDB scraper.
         There has been a change in the web site including a new API.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75

FEATURE  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
         See https://www.screenscraper.fr/
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839

FEATURE  [SCRAPERS] Fix ArcadeDB scraper. Use the new ArcadeDB API.
         It has been a while since this scraper is not working any more.

FEATURE  [SCRAPERS] Fix AEL Offline Scraper.

FEATURE  [SCRAPERS] Add support for ScummVM platform in the Offline Scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

FEATURE  [SCRAPERS] Warn user if missing scraper API keys, required stuff, etc., before scraping.
         Also, improve the scraper error reporting and the disabling of the scraper object
         if the web site is overloaded.
         Make sure TGDB scraper works like a charm. And then update the rest.

FEATURE  [SCRAPERS] Utility to check TheGamesDB monthly allowance.

FEATURE  [SCRAPERS] Utility to check MobyGames monthly allowance.

FEATURE  [SCRAPERS] Utility to check ScreenScraper monthly allowance.
